<resources>
    <string name="app_name">CalculatorBmi</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>

    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal Weight</string>
    <string name="overweight">Overweight</string>
    <string name="obese1">1 Degree Obesity</string>
    <string name="obese2">2 Degree Obesity</string>

    <string name="below_18" translatable="false"><![CDATA[< 18.5]]></string>
    <string name="between_18_25" translatable="false">18.5 - 25</string>
    <string name="between_25_30" translatable="false">25 - 30</string>
    <string name="between_30_35" translatable="false">30 - 35</string>
    <string name="above_35" translatable="false"><![CDATA[> 35]]></string>

    <string name="ideal_weight">Ideal Weight</string>
    <string name="correct_weight">Correct Weight</string>
    <string name="under_over_weight">Underweight/Overweight</string>

    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="ft">ft</string>
    <string name="ft_in">ft+in</string>

    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="st">st</string>
    <string name="st_lb">st+lb</string>

    <string name="three_dots">...</string>

</resources>