<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="2dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />


    <View
        android:layout_width="@dimen/square_size"
        android:layout_height="@dimen/square_size"
        android:background="@drawable/square_underweight"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:layout_width="@dimen/square_size"
        android:layout_height="@dimen/square_size"
        android:background="@drawable/square_normal_weight"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2" />

    <View
        android:layout_width="@dimen/square_size"
        android:layout_height="@dimen/square_size"
        android:background="@drawable/square_overweight"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/view3"
        app:layout_constraintTop_toTopOf="@id/view3" />

    <View
        android:layout_width="@dimen/square_size"
        android:layout_height="@dimen/square_size"
        android:background="@drawable/square_obesity1"
        app:layout_constraintBottom_toBottomOf="@id/view4"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toTopOf="@id/view4" />

    <View
        android:layout_width="@dimen/square_size"
        android:layout_height="@dimen/square_size"
        android:background="@drawable/square_obesity2"
        app:layout_constraintBottom_toBottomOf="@id/view5"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintStart_toStartOf="@id/view5"
        app:layout_constraintTop_toTopOf="@id/view5" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/underweight"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/below_18"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/view1" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/normal_weight"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/view2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/between_18_25"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/view2" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/overweight"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/view3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/between_25_30"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/view3" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/obese1"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view4"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/view4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/between_30_35"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/view4" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/obese2"
        app:layout_constraintBottom_toBottomOf="@id/view5"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/view5" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/above_35"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/view5" />

</androidx.constraintlayout.widget.ConstraintLayout>