<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="idealWeight"
            type="String" />

        <variable
            name="correctWeight"
            type="String" />

        <variable
            name="underWeightOrOverWeight"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_margin"
            android:weightSum="10"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/ideal_weight"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/ideal_weight_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end|center_vertical"
                android:text="@{idealWeight, default = `@string/three_dots`}"
                android:textSize="@dimen/text_size_normal"
                tools:text="75kg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_margin"
            android:weightSum="10"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/correct_weight"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/correct_weight_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end|center_vertical"
                android:text="@{correctWeight, default = `@string/three_dots`}"
                android:textSize="@dimen/text_size_normal"
                tools:text="70-80 kg" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <TextView
                android:id="@+id/underweight_overweight_left_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/under_over_weight"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/underweight_overweight_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end|center_vertical"
                android:text="@{underWeightOrOverWeight, default = `@string/three_dots`}"
                android:textSize="@dimen/text_size_normal"
                tools:text="10kg" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>